--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,13 @@
+$body-bg: #f8fafc;
+$font-family-sans-serif: 'Source Sans Pro', sans-serif;
+$font-size-base: 0.9rem;
+$line-height-base: 1.6;
+
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css");
 
+// Sweetalert 2
 @import "sweetalert2/dist/sweetalert2.css";
-@import "boostrap/dist/css/bootstrap.css";
+
+// Bootstrap
+@import 'bootstrap/scss/bootstrap';
