--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,21 @@ $font-family-sans-serif: 'Source Sans Pro', sans-serif;
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+
+.c-form-upload {
+    position: relative;
+    p {
+        border-style: dashed !important;
+    }
+    input {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+        opacity: 0;
+    }
+}
